--- a/en/index.html
+++ b/en/index.html
@@ -72,9 +72,7 @@
                         </svg>
                     </button>
                     <div class="header-language__items">
-                        <a href="/index.html" class="header-language__item">
-                            PL
-                        </a>
+                        <a href="/" class="header-language__item"> PL </a>
                         <a href="/en/" class="header-language__item"> EN </a>
                         <a href="/ua/" class="header-language__item"> UA </a>
                     </div>
@@ -87,9 +85,10 @@
         </header>
 
         <nav class="navigation" data-inert>
-            <a href="#about-us" class="navigation__item"> Про нас </a>
-            <a href="#achievments" class="navigation__item"> Чому ми? </a>
-            <a href="#our-services" class="navigation__item"> Послуги </a>
+            <a href="#about-us" class="navigation__item">About Us</a>
+            <a href="#achievments" class="navigation__item">Why us</a>
+
+            <a href="#our-services" class="navigation__item">Services</a>
 
             <div class="header-language">
                 <button class="header-language__main">
@@ -139,20 +138,18 @@
                         <h1
                             class="hover-slider__item-information-h1 h1-size-text"
                         >
-                            В ПОШУКАХ РОБОТИ?
+                            LOOKING FOR A JOB?
                         </h1>
                         <p class="hover-slider__item-information-p p-size-text">
-                            Працюємо в багатьох регіонах Польщі
+                            We work in many regions of Poland
                         </p>
-                        <button class="get-vacancy-button">
-                            Отримати вакансії
-                        </button>
+                        <button class="get-vacancy-button">Get jobs!</button>
                     </div>
 
                     <img
                         class="hover-slider__item-img"
                         src="/images/slide_1.jpg"
-                        alt="картинка"
+                        alt="image-slider-1"
                     />
                 </li>
                 <li class="hover-slider__item">
@@ -160,21 +157,19 @@
                         <h1
                             class="hover-slider__item-information-h1 h1-size-text"
                         >
-                            В ПОШУКАХ ПРАЦІВНИКІВ?
+                            LOOKING FOR EMPLOYEES?
                         </h1>
                         <p class="hover-slider__item-information-p p-size-text">
-                            Найпоширеніші вакансії: зварювальник, монтер,
-                            слюсар, маляр
+                            The most common jobs: welder, fitter, locksmith,
+                            painter
                         </p>
-                        <button class="get-vacancy-button">
-                            Отримати вакансії
-                        </button>
+                        <button class="get-vacancy-button">Get jobs!</button>
                     </div>
 
                     <img
                         class="hover-slider__item-img"
                         src="/images/slide_3.jpg"
-                        alt="картинка"
+                        alt="image-slider-2"
                     />
                 </li>
                 <li class="hover-slider__item">
@@ -182,21 +177,19 @@
                         <h1
                             class="hover-slider__item-information-h1 h1-size-text"
                         >
-                            ОФІЦІЙНЕ ПРАЦЕВЛАШТУВАННЯ
+                            OFFICIAL EMPLOYMENT
                         </h1>
                         <p class="hover-slider__item-information-p p-size-text">
-                            Швидке і якісне оформлення документів для легального
-                            перебування і праці на території Польщі
+                            Fast and high-quality processing of documents for
+                            legal stay and work in Poland
                         </p>
-                        <button class="get-vacancy-button">
-                            Отримати вакансії
-                        </button>
+                        <button class="get-vacancy-button">Get jobs!</button>
                     </div>
 
                     <img
                         class="hover-slider__item-img"
                         src="/images/slide_2.jpg"
-                        alt="картинка"
+                        alt="image-slider-3"
                     />
                 </li>
             </ul>
@@ -213,22 +206,24 @@
                 <div class="about-us-block">
                     <div class="about-us-block__info">
                         <h2 class="about-us-block__info-h2 h2-size-text">
-                            Про нас
+                            About us
                         </h2>
                         <p class="about-us-block__info-p p-size-text">
-                            Фірма працює з 2021 по всій території Польщі,
-                            займаємося працевлаштуванням людей з таких країн як
-                            Україна, Білорусь, Індонезія, Молдова, Індія,
-                            Філіппіни, країн Африки на спеціальності:
-                            зварювальник, слюсар, монтер, маляр, шліфувальник.
-                            До виконання довірених робіт, ми підходимо з
-                            належною відповідальністю та надійністю. В нас
-                            працюють тільки досвідчені фахівці з необхідною
-                            кваліфікацією. Наші знання та досвід дозволяють нам
-                            надавати послуги відповідно до законодавства та
-                            чинних норм і стандартів безпеки. Ми дбаємо про те,
-                            щоб забезпечити наших працівників комфортом і
-                            безпекою на протязі всього періоду співпраці.
+                            The company has been operating since 2021 throughout
+                            the territory of Poland, we are engaged in the
+                            employment of people from such countries as Ukraine,
+                            Belarus, Indonesia, Moldova, India, the Philippines,
+                            and African countries in the specialty: welder,
+                            locksmith, fitter, painter, grinder. We approach the
+                            performance of entrusted works with due
+                            responsibility and reliability. We employ only
+                            experienced specialists with the necessary
+                            qualifications. Our knowledge and experience allow
+                            us to provide services in accordance with
+                            legislation and applicable safety norms and
+                            standards. We take care to provide our employees
+                            with comfort and safety during the entire period of
+                            cooperation.
                         </p>
                     </div>
                     <img
@@ -242,7 +237,7 @@
 
         <section class="achievments sections" id="achievments" data-inert>
             <div class="container">
-                <h2 class="achievments__h2 h2-size-text">Наші досягнення</h2>
+                <h2 class="achievments__h2 h2-size-text">Our achievements</h2>
                 <ul class="achievments-list">
                     <li class="achievments-list__item">
                         <svg
@@ -254,8 +249,8 @@
                             />
                         </svg>
                         <p class="achievments-list__item-text p-size-text">
-                            На протязі часу роботи фірми ми працевлаштували
-                            понад 1000 осіб
+                            During the time of the company's operation, we
+                            employed more than 1,000 people
                         </p>
                     </li>
                     <li class="achievments-list__item">
@@ -268,8 +263,8 @@
                             />
                         </svg>
                         <p class="achievments-list__item-text p-size-text">
-                            Швидке і якісне оформлення документів для легального
-                            перебування і праці на території Польщі
+                            Fast and high-quality processing of documents for
+                            legal stay and work in Poland
                         </p>
                     </li>
                     <li class="achievments-list__item">
@@ -282,8 +277,7 @@
                             />
                         </svg>
                         <p class="achievments-list__item-text p-size-text">
-                            Говоримо на українській,польській, англійській,
-                            російській мовах
+                            We speak Ukrainian, Polish, English, Russian
                         </p>
                     </li>
                     <li class="achievments-list__item">
@@ -296,8 +290,8 @@
                             />
                         </svg>
                         <p class="achievments-list__item-text p-size-text">
-                            Своєчасні виплати заробітної плати та повний пакет
-                            медичного страхування
+                            Timely salary payments and a full health insurance
+                            package
                         </p>
                     </li>
                 </ul>
@@ -308,12 +302,12 @@
             <div class="container">
                 <img
                     src="/images/cert2.png"
-                    alt="Сертифікат 1"
+                    alt="certificate-1"
                     class="certificats__img active"
                 />
                 <img
                     src="/images/cert1.png"
-                    alt="Сертифікат 2"
+                    alt="certificate-2"
                     class="certificats__img"
                 />
             </div>
@@ -326,7 +320,7 @@
                 <img
                     class="certificats-modal__img modal__inner"
                     src=""
-                    alt="Сертифікат в зумі"
+                    alt="certificate-in-zoom"
                 />
                 <button class="modal__close">
                     <svg viewBox="0 0 23 23" fill="none">
@@ -343,44 +337,46 @@
 
         <section class="our-services sections" id="our-services" data-inert>
             <div class="container">
-                <h2 class="our-services__h2 h2-size-text">Наші послуги</h2>
+                <h2 class="our-services__h2 h2-size-text">Our services</h2>
                 <ul class="our-services-cards">
                     <li class="our-services-cards__item">
-                        <h4 class="our-services-cards__item-h4">Легалізація</h4>
+                        <h4 class="our-services-cards__item-h4">
+                            Legalization
+                        </h4>
                         <p class="our-services-cards__item-p p-size-text">
-                            Ми надаємо всі необхідні документи, пов'язані з
-                            перебуванням і легальною роботою в Польщі
+                            We provide all necessary documents related to
+                            staying and legal work in Poland
                         </p>
                         <button class="our-services-cards__item-button">
-                            Детальніше
+                            More details
                         </button>
                     </li>
                     <li class="our-services-cards__item">
-                        <h4 class="our-services-cards__item-h4">Рекрутація</h4>
+                        <h4 class="our-services-cards__item-h4">Recruitment</h4>
                         <p class="our-services-cards__item-p p-size-text">
-                            Робота в Польщі для іноземців. Якщо ви зацікавлені
-                            легальною працею в Польщі, пропонуємо вам зв'язатися
-                            з нами. Процес рекрутингу передбачає поряд із
-                            залученням, відбором і співбесідою також отримання
-                            додаткової інформації про кандидатів, підписання
-                            контракту й адаптацію нових працівників
+                            Work in Poland for foreigners. If you are interested
+                            in legal work in Poland, we suggest you contact us.
+                            The recruiting process includes recruitment,
+                            selection, and interview, obtaining additional
+                            information about candidates, signing a contract,
+                            and adopting new employees
                         </p>
                         <button class="our-services-cards__item-button">
-                            Детальніше
+                            More details
                         </button>
                     </li>
                     <li class="our-services-cards__item">
                         <h4 class="our-services-cards__item-h4">
-                            Кваліфікована підготовка спеціалістів до роботи
+                            Qualified training of specialists for work
                         </h4>
                         <p class="our-services-cards__item-p p-size-text">
-                            Якщо у Вас не має досвіду в зварювальних роботах -
-                            це не проблема. Запишіться до нас на навчання
-                            зварювальника, швидко і якісно опануєте нову
-                            спеціальність
+                            If you do not have experience in welding work - this
+                            is not a problem. Sign up for welding training with
+                            us, you will quickly and efficiently master a new
+                            specialty
                         </p>
                         <button class="our-services-cards__item-button">
-                            Детальніше
+                            More details
                         </button>
                     </li>
                 </ul>
@@ -388,7 +384,7 @@
         </section>
 
         <section class="countries sections" data-inert>
-            <h2 class="countries__h2 h2-size-text">Країни-партнери</h2>
+            <h2 class="countries__h2 h2-size-text">Partner countries</h2>
             <div class="container">
                 <div class="countries-list">
                     <img src="/images/pl.png" alt="ua" /><img
@@ -409,17 +405,17 @@
             <span class="forma__overlay"></span>
             <div class="forma-info">
                 <h1 class="forma-info__h1 h1-size-text">
-                    Отримуйте найактуальніші вакансії!
+                    Get the most current vacancies!
                 </h1>
                 <p class="forma-info__p p-size-text">
-                    Заповніть форму і ми одразу з Вами зв'яжемося!
+                    Fill out the form and we will contact you right away!
                 </p>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                     <path
                         d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
                     />
                 </svg>
-                <button class="get-vacancy-button">Отримати вакансії!</button>
+                <button class="get-vacancy-button">Get jobs!</button>
             </div>
         </section>
 
@@ -444,21 +440,21 @@
             <div class="form-modal-inner modal__inner">
                 <img
                     src="/images/form-banner.png"
-                    alt="Баннер"
+                    alt="banner"
                     class="form-modal-inner__img"
                 />
                 <div class="form-modal-inner-info">
                     <h4 class="form-modal-inner-info__h4">
-                        Давайте будемо на зв'язку!
+                        Let's keep in touch!
                     </h4>
                     <p class="form-modal-inner-info__p">
-                        Заповніть форму нижче і ми з Вами зв'яжемося!
+                        Fill out the form below and we will contact you!
                     </p>
                     <form class="form-modal-inner-form" action="">
                         <input
                             id="input-name"
                             class="form-modal-inner-form__input"
-                            placeholder="Ваше ім'я"
+                            placeholder="Your name"
                             type="text"
                         />
                         <span
@@ -467,7 +463,7 @@
                         <input
                             id="input-phone"
                             class="form-modal-inner-form__input"
-                            placeholder="Ваш номер телефону"
+                            placeholder="Your phone number"
                             type="tel"
                             name="telefon"
                             id="telF"
@@ -481,7 +477,7 @@
                         >
                             <span
                                 class="form-modal-inner-form__submit-button-text"
-                                >Відправити</span
+                                >Send</span
                             >
                             <span
                                 class="form-modal-inner-form__submit-button-loader"
@@ -490,7 +486,7 @@
                     </form>
 
                     <div class="form-modal-inner-info__successfully">
-                        Дякую! Дані успішно надіслані.
+                        Thank you! Data sent successfully.
                     </div>
                 </div>
             </div>
