--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
                         </svg>
                     </button>
                     <div class="header-language__items">
-                        <a href="/index.html" class="header-language__item">
-                            PL
-                        </a>
+                        <a href="/" class="header-language__item"> PL </a>
                         <a href="/en/" class="header-language__item"> EN </a>
                         <a href="/ua/" class="header-language__item"> UA </a>
                     </div>
@@ -216,20 +214,19 @@
                             O nas
                         </h2>
                         <p class="about-us-block__info-p p-size-text">
-                            Firma działa od 2021 roku na terenie całej Polski,
-                            zajmujemy się zatrudnieniem osób z takich krajów jak
-                            Ukraina, Białoruś, Indonezja, Mołdawia, Indie,
-                            Filipiny, kraje afrykańskie w specjalności: spawacz,
-                            ślusarz, monter, malarz , szlifierka. Do wykonywania
-                            powierzonych prac podchodzimy z należytą
-                            odpowiedzialnością i rzetelnością. Zatrudniamy
-                            wyłącznie doświadczonych specjalistów posiadających
-                            niezbędne kwalifikacje. Nasza wiedza i doświadczenie
-                            pozwalają nam świadczyć usługi zgodnie z przepisami
-                            prawa oraz obowiązującymi normami i standardami
-                            bezpieczeństwa. Dbamy o zapewnienie naszym
-                            pracownikom komfortu i bezpieczeństwa przez cały
-                            okres współpracy.
+                            Nasza firma z sukcesem działa od 2021 roku na
+                            terenie całej Polski, pomagając osobom z Ukrainy,
+                            Białorusi, Indonezji, Mołdawii, Indii, Filipin i
+                            krajów afrykańskich w znalezieniu pracy w branży
+                            obróbki metali. Nasz zespół odpowiedzialnie i
+                            rzetelnie wykonuje wszystkie powierzone zadania,
+                            preferując doświadczonych specjalistów,
+                            posiadających odpowiednie kwalifikacje. Nasza
+                            głęboka wiedza i bogate doświadczenie pozwalają nam
+                            spełniać wszelkie wymagania prawne i standardy
+                            bezpieczeństwa. Dbamy o to, aby nasi pracownicy
+                            czuli się komfortowo i bezpiecznie przez cały okres
+                            współpracy.
                         </p>
                     </div>
                     <img
@@ -358,12 +355,18 @@
                     <li class="our-services-cards__item">
                         <h4 class="our-services-cards__item-h4">Rekrutacja</h4>
                         <p class="our-services-cards__item-p p-size-text">
-                            Praca w Polsce dla obcokrajowców. Jeśli jesteś
-                            zainteresowany legalną pracą w Polsce, zapraszamy do
-                            kontaktu. Proces rekrutacji obejmuje, obok
-                            rekrutacji, selekcji i rozmowy kwalifikacyjnej,
-                            pozyskanie dodatkowych informacji o kandydatach,
-                            podpisanie umowy oraz adaptację nowych pracowników
+                            Szukasz legalnej pracy za granicą? Pomożemy ci w
+                            tym! Nasza firma zapewnia kompleksowy proces
+                            rekrutacji, uwzględniający wszystkie aspekty, w tym
+                            legalność zatrudnienia. Gwarantujemy nie tylko
+                            profesjonalny dobór kandydatów, ale także pomoc w
+                            kwestiach adaptacji do nowego środowiska. Naszym
+                            celem jest zapewnienie Ci stabilnej i bezpiecznej
+                            pracy za granicą, abyś mógł zrealizować swój
+                            potencjał i odnieść sukces w swojej karierze. Nie
+                            trać możliwości, skontaktuj się z nami już dziś i
+                            otwórz nowe horyzonty dla swojego zawodowego i
+                            osobistego rozwoju!
                         </p>
                         <button class="our-services-cards__item-button">
                             Więcej szczegółów
@@ -371,13 +374,20 @@
                     </li>
                     <li class="our-services-cards__item">
                         <h4 class="our-services-cards__item-h4">
-                            Kwalifikowane szkolenie specjalistów do pracy
+                            Kwalifikowany dobór personelu
                         </h4>
                         <p class="our-services-cards__item-p p-size-text">
-                            Jeśli nie masz doświadczenia w pracach spawalniczych
-                            - to nie problem. Zapisz się u nas na szkolenie
-                            spawalnicze, szybko i sprawnie opanujesz nową
-                            specjalność
+                            Nasza firma posiada znaczne doświadczenie w selekcji
+                            personelu w branży obróbki metali. Rozumiemy, że
+                            prace spawalnicze wymagają szczególnej uwagi dla
+                            detali oraz wysokiego poziomu biegłości. Dlatego
+                            nasi rekruterzy preferują kandydatów z odpowiednim
+                            doświadczeniem, kwalifikacjami i zawodowymi
+                            umiejętnościami w tym obszarze. Gwarantujemy, że
+                            każdy pracownik, którego polecamy, posiada nie tylko
+                            niezbędną wiedzę techniczną, ale także umiejętność
+                            pracy w warunkach wysokiego ciśnienia oraz
+                            spełniania wymagań bezpieczeństwa pracy
                         </p>
                         <button class="our-services-cards__item-button">
                             Więcej szczegółów
