--- a/ua/index.html
+++ b/ua/index.html
@@ -72,9 +72,7 @@
                         </svg>
                     </button>
                     <div class="header-language__items">
-                        <a href="/index.html" class="header-language__item">
-                            PL
-                        </a>
+                        <a href="/" class="header-language__item"> PL </a>
                         <a href="/en/" class="header-language__item"> EN </a>
                         <a href="/ua/" class="header-language__item"> UA </a>
                     </div>
