--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <title>MST Profi</title>
 
         <meta name="description" content="" />
-        <meta name="keywords" content="" />
+        <meta
+            name="keywords"
+            content="Spawacz,polska,praca,robota,monterz,slusarz,malarz,szliferz,gdansk,bydgoszcz,torun,wroclaw,opole,rekrutacja,stocznia,delegacja,spawanie,tig,mig,mag,rury,blachy"
+        />
     </head>
     <body>
         <header class="header" data-inert>
@@ -150,7 +153,7 @@
                     <img
                         class="hover-slider__item-img"
                         src="/images/slide_1.jpg"
-                        alt="картинка"
+                        alt="obraz suwaka 1"
                     />
                 </li>
                 <li class="hover-slider__item">
@@ -172,7 +175,7 @@
                     <img
                         class="hover-slider__item-img"
                         src="/images/slide_3.jpg"
-                        alt="картинка"
+                        alt="obraz suwaka 2"
                     />
                 </li>
                 <li class="hover-slider__item">
@@ -194,7 +197,7 @@
                     <img
                         class="hover-slider__item-img"
                         src="/images/slide_2.jpg"
-                        alt="картинка"
+                        alt="obraz suwaka 3"
                     />
                 </li>
             </ul>
@@ -305,12 +308,12 @@
             <div class="container">
                 <img
                     src="/images/cert2.png"
-                    alt="Сертифікат 1"
+                    alt="Certyfikat 1"
                     class="certificats__img active"
                 />
                 <img
                     src="/images/cert1.png"
-                    alt="Сертифікат 2"
+                    alt="Certyfikat 2"
                     class="certificats__img"
                 />
             </div>
@@ -323,7 +326,7 @@
                 <img
                     class="certificats-modal__img modal__inner"
                     src=""
-                    alt="Сертифікат в зумі"
+                    alt="Certyfikat w powiększeniu"
                 />
                 <button class="modal__close">
                     <svg viewBox="0 0 23 23" fill="none">
@@ -455,7 +458,7 @@
             <div class="form-modal-inner modal__inner">
                 <img
                     src="/images/form-banner.png"
-                    alt="Баннер"
+                    alt="Transparent"
                     class="form-modal-inner__img"
                 />
                 <div class="form-modal-inner-info">
