--- a/ua/index.html
+++ b/ua/index.html
@@ -14,7 +14,10 @@
         <title>MST Profi</title>
 
         <meta name="description" content="" />
-        <meta name="keywords" content="" />
+        <meta
+            name="keywords"
+            content="cварщик,работа,робота,польша,монтер,слесарь,слюсар,європа,вакансії,маляр,торунь,бидгощ,гданськ,ополе,сточня,праця,тіг,міг,маг,вроцлав,торунь"
+        />
     </head>
     <body>
         <header class="header" data-inert>
@@ -22,7 +25,7 @@
                 <a href="#" class="header-logo">
                     <img
                         src="/images/shorticon.ico"
-                        alt="logo"
+                        alt="лого"
                         class="header-logo__image"
                     />
 
@@ -150,7 +153,7 @@
                     <img
                         class="hover-slider__item-img"
                         src="/images/slide_1.jpg"
-                        alt="картинка"
+                        alt="картинка слайдера 1"
                     />
                 </li>
                 <li class="hover-slider__item">
@@ -172,7 +175,7 @@
                     <img
                         class="hover-slider__item-img"
                         src="/images/slide_3.jpg"
-                        alt="картинка"
+                        alt="картинка слайдера 2"
                     />
                 </li>
                 <li class="hover-slider__item">
@@ -194,7 +197,7 @@
                     <img
                         class="hover-slider__item-img"
                         src="/images/slide_2.jpg"
-                        alt="картинка"
+                        alt="картинка слайдера 3"
                     />
                 </li>
             </ul>
