--- a/en/index.html
+++ b/en/index.html
@@ -14,7 +14,10 @@
         <title>MST Profi</title>
 
         <meta name="description" content="" />
-        <meta name="keywords" content="" />
+        <meta
+            name="keywords"
+            content="welder,poland,work,job,grinder,painter,torun,bydgoszcz,shipyard,welding,tig,mig,mag,gdansk,wroclaw,opole,plate,pipe"
+        />
     </head>
     <body>
         <header class="header" data-inert>
