--- a/index.html
+++ b/index.html
@@ -307,13 +307,18 @@
         <section class="certificats sections">
             <div class="container">
                 <img
-                    src="/images/cert2.png"
+                    src="/images/cert1.png"
                     alt="Certyfikat 1"
-                    class="certificats__img active"
+                    class="certificats__img"
                 />
                 <img
-                    src="/images/cert1.png"
+                    src="/images/cert2.png"
                     alt="Certyfikat 2"
+                    class="certificats__img"
+                />
+                <img
+                    src="/images/cert3.png"
+                    alt="Certyfikat 3"
                     class="certificats__img"
                 />
             </div>
