--- a/en/index.html
+++ b/en/index.html
@@ -304,13 +304,18 @@
         <section class="certificats sections">
             <div class="container">
                 <img
-                    src="/images/cert2.png"
+                    src="/images/cert1.png"
                     alt="certificate-1"
-                    class="certificats__img active"
+                    class="certificats__img"
                 />
                 <img
-                    src="/images/cert1.png"
+                    src="/images/cert2.png"
                     alt="certificate-2"
+                    class="certificats__img"
+                />
+                <img
+                    src="/images/cert3.png"
+                    alt="certificate-3"
                     class="certificats__img"
                 />
             </div>
