--- a/ua/index.html
+++ b/ua/index.html
@@ -308,13 +308,18 @@
         <section class="certificats sections">
             <div class="container">
                 <img
-                    src="/images/cert2.png"
+                    src="/images/cert1.png"
                     alt="Сертифікат 1"
-                    class="certificats__img active"
+                    class="certificats__img"
                 />
                 <img
-                    src="/images/cert1.png"
+                    src="/images/cert2.png"
                     alt="Сертифікат 2"
+                    class="certificats__img"
+                />
+                <img
+                    src="/images/cert3.png"
+                    alt="Сертифікат 3"
                     class="certificats__img"
                 />
             </div>
