--- a/en/index.html
+++ b/en/index.html
@@ -459,26 +459,40 @@
                         Fill out the form below and we will contact you!
                     </p>
                     <form class="form-modal-inner-form" action="">
-                        <input
-                            id="input-name"
-                            class="form-modal-inner-form__input"
-                            placeholder="Your name"
-                            type="text"
-                        />
-                        <span
-                            class="form-modal-inner-form__correctly-input-name"
-                        ></span>
-                        <input
-                            id="input-phone"
-                            class="form-modal-inner-form__input"
-                            placeholder="Your phone number"
-                            type="tel"
-                            name="telefon"
-                            id="telF"
-                        />
-                        <span
-                            class="form-modal-inner-form__correctly-input-phone"
-                        ></span>
+                        <div class="form-modal-inner-form__input-block">
+                            <input
+                                id="input-name"
+                                class="form-modal-inner-form__input"
+                                placeholder="Your name"
+                                type="text"
+                                maxlength="20"
+                            />
+                            <p
+                                id="form-modal-inner-form__correctly-input-name"
+                                class="form-modal-inner-form__correctly-input"
+                            >
+                                Field is required
+                            </p>
+                        </div>
+                        <div class="form-modal-inner-form__input-block">
+                            <input
+                                id="input-phone"
+                                class="form-modal-inner-form__input"
+                                placeholder="Your phone number"
+                                type="tel"
+                                name="telefon"
+                                maxlength="20"
+                            />
+                            <p
+                                id="form-modal-inner-form__correctly-input-phone"
+                                class="form-modal-inner-form__correctly-input"
+                            >
+                                Field is required
+                            </p>
+                        </div>
+                        <div class="form-modal-inner-info__not-successfully">
+                            Please fill in all required fields
+                        </div>
                         <button
                             class="form-modal-inner-form__submit-button"
                             type="submit"
@@ -509,6 +523,14 @@
                     ></path>
                 </svg>
             </button>
+        </div>
+
+        <div class="fixed-form-connection">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                <path
+                    d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"
+                />
+            </svg>
         </div>
     </body>
 
