--- a/ua/index.html
+++ b/ua/index.html
@@ -461,26 +461,40 @@
                         Заповніть форму нижче і ми з Вами зв'яжемося!
                     </p>
                     <form class="form-modal-inner-form" action="">
-                        <input
-                            id="input-name"
-                            class="form-modal-inner-form__input"
-                            placeholder="Ваше ім'я"
-                            type="text"
-                        />
-                        <span
-                            class="form-modal-inner-form__correctly-input-name"
-                        ></span>
-                        <input
-                            id="input-phone"
-                            class="form-modal-inner-form__input"
-                            placeholder="Ваш номер телефону"
-                            type="tel"
-                            name="telefon"
-                            id="telF"
-                        />
-                        <span
-                            class="form-modal-inner-form__correctly-input-phone"
-                        ></span>
+                        <div class="form-modal-inner-form__input-block">
+                            <input
+                                id="input-name"
+                                class="form-modal-inner-form__input"
+                                placeholder="Ваше ім'я"
+                                type="text"
+                                maxlength="20"
+                            />
+                            <p
+                                id="form-modal-inner-form__correctly-input-name"
+                                class="form-modal-inner-form__correctly-input"
+                            >
+                                Поле обов'язкове
+                            </p>
+                        </div>
+                        <div class="form-modal-inner-form__input-block">
+                            <input
+                                id="input-phone"
+                                class="form-modal-inner-form__input"
+                                placeholder="Ваш номер телефону"
+                                type="tel"
+                                name="telefon"
+                                maxlength="20"
+                            />
+                            <p
+                                id="form-modal-inner-form__correctly-input-phone"
+                                class="form-modal-inner-form__correctly-input"
+                            >
+                                Поле обов'язкове
+                            </p>
+                        </div>
+                        <div class="form-modal-inner-info__not-successfully">
+                            Будь ласка, заповніть всі обов'язкові поля
+                        </div>
                         <button
                             class="form-modal-inner-form__submit-button"
                             type="submit"
@@ -511,6 +525,14 @@
                     ></path>
                 </svg>
             </button>
+        </div>
+
+        <div class="fixed-form-connection">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                <path
+                    d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"
+                />
+            </svg>
         </div>
     </body>
 
